--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bryan Gula Molly Beach",
+  "name": "Molly Beach Bryan Gula",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
